--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Shyamalapriya Viswanathan
 locale:           en_US
-url:              http://shyamalapriya.github.io
+#url:              http://shyamalapriya.github.io
 
 # Jekyll configuration
 
