--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
+    analytics: UA-55007120-1
     verify: 
     ad-client: 
     ad-slot: 
