--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   avatar: profile.jpg
   bio: ""
   email: 
-  disqus-shortname: 
+  disqus-shortname: shyamalapriya
   twitter: shyamalapriya
   facebook: #username
   google:
