New profile picture added

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ kramdown:
 # Site owner
 owner:
   name: 
-  avatar: profile.jpg
+  avatar: profile2.jpeg
   bio: ""
   email: #email
   disqus-shortname: shyamalapriya
